--- a/kinematics_project/kuka_arm/CMakeLists.txt
+++ b/kinematics_project/kuka_arm/CMakeLists.txt
@@ -10,6 +10,7 @@ add_compile_options(-std=c++11)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED
 	COMPONENTS
+		message_generation
 		moveit_core
 		moveit_ros_planning
 		moveit_ros_planning_interface
@@ -17,6 +18,7 @@ find_package(catkin REQUIRED
 		geometric_shapes
 		moveit_visual_tools
 		roscpp
+		roslint
 		rospy
 	)
 find_package(Eigen3 REQUIRED)
@@ -62,11 +64,11 @@ find_package(Eigen3 REQUIRED)
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
+ add_service_files(
+   FILES
+   CalculateIK.srv
 #   Service2.srv
-# )
+ )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -76,10 +78,12 @@ find_package(Eigen3 REQUIRED)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+ generate_messages(
+   DEPENDENCIES
+   std_msgs  # Or other packages containing msgs
+	 geometry_msgs
+	 trajectory_msgs
+ )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -148,7 +152,7 @@ add_executable(trajectory_sampler src/trajectory_sampler.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-add_dependencies(trajectory_sampler ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(trajectory_sampler ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries(trajectory_sampler
@@ -203,3 +207,5 @@ add_dependencies(trajectory_sampler ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+# roslint_cpp(src/trajectory_sampler.cpp include/kuka_arm/trajectory_sampler.h)
+# roslint_python(scripts/IK_server.py scripts/target_spawn.py)
